CSS/organiseddiets.css
body{
  background-color:#f2f2f2;
}
.container{
  background-color:white;
}
.title{
  text-align:right;
  font-size:60px;
  padding-right:0;
  margin-bottom:30px;
  margin-right:20px;
}
.image{
  padding-left:0;
}
.meals{
  padding-top:20px;
  padding-bottom:30px;
}
.details{
  background-color:#f2f2f2;
  text-align:left;
  padding:80px 30px 80px 60px;
  margin-left:10px;

}


#footer{
  background-color:#c4c4c4;
}
.container-diet{
  height:40px;
  background-color:#c4c4c4;
}
.breakfast-nav>a{
  margin-top:8px;
  display:flex;
  justify-content: center;
}
.lunch-nav>a{
  margin-top:8px;
  display:flex;
  justify-content: center;
}
.dinner-nav>a{
  margin-top:8px;
  display:flex;
  justify-content: center;
}
.organised:hover{
  background-color:#e0e0e0;
  cursor:pointer;
}
.organised:active{
  background-color:#e0e0e0;
}
.active{
  background-color:#e0e0e0;
}
#breakfast-link,#lunch-link,#dinner-link{
  color:black;
  text-decoration:none;
}
#lunch{
  display:none;
}
#dinner{
  display:none;
}
/*Styles for social icons*/
.social-icons{
  float:right;
}
.btn.btn-rounded {
  border-radius: 50px;
  margin:5px;
}

.btn-facebook {
    background: #3b579d;
    color: #ffffff
}

 .btn-twitter {
     background: #2caae1;
     color: #ffffff
 }
 .btn-instagram {
     background: #430297;
     color: #ffffff
 }
/*Add hover effect to social icons*/
.btn-facebook:hover,
.btn-facebook:focus {
     background: #2d4278;
     color: #ffffff
}
.btn-twitter:hover,
.btn-twitter:focus {
    background: #1b8dbf;
    color: #ffffff
}
.btn-instagram:hover,
.btn-instagram:focus {
    background: #430297;opacity:0.7;
    color: #ffffff
}

